2006-02-06  Phil Muldoon  <pmuldoon@redhat.com>

	* MenuBar.java (menuItemEvent): Added File -> Close handler

2006-02-06  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcViewPage.java (buttonEvent): Removed 'Hold' button.
	Added refresh time saving.

2006-02-05  Andrew Cagney  <cagney@redhat.com>

	* MainWindow.java: Replace FryskGui, with Gui.
	* ProcDataModel.java: Ditto.
	* ProcViewPage.java: Ditto.
	* ProgramData.java: Ditto.
	* ProgramAddWindow.java: Ditto.

	* observers/ObserverManager.java: Replace FryskGui.FRYSK_CONFIG
	with Config.FRYSK_DIR.
	* ProgramData.java: Ditto.
	* ProgramViewPage.java: Ditto.

2006-02-04  Sami Wagiaalla  <swagiaal@redhat.com>

	* ListView.java: Added proper observer removal upon list
	clearing (fixed double action addition bug).
	* DetailedObserverTreeView.java : Removed debug output. 
	* FilterLineWidget.java : Ditto.
	* ActionsWidget.java: Now clears lists upon selection change.
	Removed debug output.

2006-02-03  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/ObserverRoot.java: Added toString method.
	* filters/FilterPoint.java: Added toString method.
	* actions/TaskActionPoint.java (TaskActionPoint): eplaced
	ActionPoint argument in copy constructor with correct
	TaskActionPoint.
	* actions/GenericActionPoint.java (GenericActionPoint): replaced
	ActionPoint argument in copy constructor with correct
	GenericActionPoint.
	* actions/ActionPoint.java: Added toString method.
	* ObservableLinkedList.java: Fixed copy constructor to dynamically
	call copy constructor of each element.
	* FilterLineWidget.java: Removed debug output.
	* DetailedObserverTreeView.java: Removed debug output. Added
	code for properly removing observers from removed lists.

2006-02-02  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskCloneObserver.java: Fixed some bugs in copy
	constructor.
	* observers/TaskObserverRoot.java: Ditto.
	* observers/TaskForkedObserver.java: Ditto.
	* observers/TaskExecObserver.java: Ditto.